--- a/package.json
+++ b/package.json
@@ -9,10 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.3.2",
+    "@react-native-picker/picker": "^2.5.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "^2.13.4",
+    "react-native-modalize": "^2.1.1",
+    "react-native-number-please": "^1.0.5",
+    "react-native-progress": "^5.0.1",
+    "react-native-raw-bottom-sheet": "^2.2.0",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-simple-picker": "^3.1.4",
+    "react-native-svg": "^14.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
